# ygo-desktop

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.ci/: _base.yml
.ci/lint/: cargo-check.yml  typecheck.yml
.ci/test/: unit.yml
.github/workflows/: ci.yml  release.yml
scripts/: import-legacy.ts  link-shared.mjs
src/: api.ts  autocomplete.ts  backup.ts  cardmarket.ts  collection-crud.ts  constants.ts  deck-suggestions.ts  logger.ts  main.tsx  persistence.ts  render.ts  settings.ts  suggestions.ts  telemetry.ts  types.ts  utils.ts  wishlist.ts  ydk.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts
src/app/: router.ts  state.ts  useLegacyMount.ts
src/auth/: cloud-sync.ts  state.ts
src/deck/: add-input.ts  builder-view.ts  card-modal.ts  index.ts  lifecycle.ts  list-view.ts  state.ts  wishlist-modal.ts  ydk-import.ts
src/lib/: auth-validators.ts  ban-badge.ts  banlist.ts  download.ts  fuzzy.ts  image-cache.ts  lru-map.ts  overlay-modal.ts  parallel.ts  platform.ts  retry.ts  safe.ts  useFocusTrap.ts
src/modal/: card-detail.ts  deck-popover.ts  deps.ts  edition-picker.ts  index.ts  lifecycle.ts
src/styles/: base.css  legacy.css  tokens.css
src/sync/: engine.ts  hash.ts  (+3 more)
test/: QuantityStepper.test.tsx  auth-validators.test.ts  fuzzy.test.ts  retry.test.ts  safe.test.ts  setup.ts  sync-store.test.ts  utils.test.ts
(+25 files in other folders)
