[package]
name = "ygo-desktop"
version = "0.2.1"
description = "YGO Collection desktop (Tauri 2) — offline + CRDT sync"
authors = ["toine"]
edition = "2021"

[lib]
name = "ygo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop-only plugins (updater, process relaunch, system opener).
# Mobile targets don't need them and the updater plugin is desktop-only anyway.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener  = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
